# RobAFISApplication

./: .gitignore  README.md  Services_Message_Type.md  map.txt  setup_ros.sh
product/: model.config  model.sdf
src/robot_control/: CMakeLists.txt  empty.world  maze.world  package.xml
src/robot_control/action/: createMap.action  deliverProduct.action  docking.action  driveTo.action  followWall.action  mapEnvironment.action  navDriveTo.action  releaseProduct.action  returnToRest.action
src/robot_control/include/robot_control/: application.hh  base.h  base_driver.hh  control.hh  deliberative_navigation.hh  grid_mapping.hh  localization.hh  map_information.hh  operation.hh  path_planning.hh  product_manipulation.hh  transport_agent.hh
src/robot_control/launch/: main_nodes.launch  master.launch
src/robot_control/msg/: localization.msg
src/robot_control/src/: application.cpp  base_driver.cpp  control.cpp  deliberative_navigation.cpp  grid_mapping.cpp  localization.cpp  map_information.cpp  operation.cpp  path_planning.cpp  product_manipulation.cpp  transport_agent.cpp
src/robot_control/src/libraries/: OGMap.cc  OGMap.h
src/robot_control/srv/: baseDriverSetDrivePower.srv  baseDriverSetRotation.srv  controlReportState.srv  deliberativeNavigationStatus.srv  deliberativeNavigationStop.srv  gridMappingCreateMap.srv  gridMappingGridToLocation.srv  gridMappingLocationToGrid.srv  localizationEstimatePosition.srv  mapInformationUpdateGridMap.srv  mapInformationUpdateMapPosition.srv  pathPlanningDefineGlobalPath.srv  robAFISApplicationTransportProduct.srv  transportAgentAbort.srv  transportAgentReport.srv  transportAgentReturnPathDistance.srv
src/robot_control/world/: arena2.world  arena2_gripper.world  old.sdf  pioneer.world  product.world  product_model.sdf
src/robot_control/xacro/: robotiq_hand_standalone.urdf.xacro
src/robotiq_s_model_articulated_gazebo_plugins/src/: RobotiqHandPlugin.cpp
src/robotiq_s_model_visualization/cfg/: robotiq_hand.urdf.xacro  robotiq_hand_compiled.sdf  robotiq_hand_compiled.urdf  robotiq_hand_pose.sdf  robotiq_hand_pose.urdf  s-model_articulated.xacro
src/ros-pioneer3at/config/: cmd_vel_mux.yaml
src/ros-pioneer3at/config/move_base/: costmap_common.yaml
src/ros-pioneer3at/config/sick_wrapper/: LMS_200.yaml
src/ros-pioneer3at/launch/: custom.launch  gazebo_world.launch  robot_control.launch  ui.launch
src/ros-pioneer3at/launch/apps/: navigation.launch
src/ros-pioneer3at/launch/core/: gazebo.launch
src/ros-pioneer3at/launch/lidar/: gazebo_hokuyo.launch
src/ros-pioneer3at/meshes/: axle.stl  back_sonar.stl  chassis.stl  front_sonar.stl  hub.stl  top.stl  wheel.stl
src/ros-pioneer3at/models/: pioneer3at.blend  pioneer3at.sdf
src/ros-pioneer3at/urdf/: Sonar Array Helper.ods
